--- a/plugin.yaml
+++ b/plugin.yaml
@@ -1,8 +1,8 @@
 name: "dashboard"
-version: "0.0.0"
+version: "0.0.5"
 usage: "A simplified way of working with Helm"
 description: "View HELM situation in nice web UI"
 command: "$HELM_PLUGIN_DIR/bin/dashboard"
-#hooks:
-#  install: "cd $HELM_PLUGIN_DIR; scripts/install_plugin.sh"
-#  update: "cd $HELM_PLUGIN_DIR; scripts/install_plugin.sh"
+hooks:
+  install: "cd $HELM_PLUGIN_DIR; scripts/install_plugin.sh"
+  update: "cd $HELM_PLUGIN_DIR; scripts/install_plugin.sh"
