--- a/plugin.yaml
+++ b/plugin.yaml
@@ -3,6 +3,7 @@ version: "0.2.4"
 usage: "A simplified way of working with Helm"
 description: "View HELM situation in nice web UI"
 command: "$HELM_PLUGIN_DIR/bin/helm-dashboard"
+ignoreFlags: false
 hooks:
   install: "cd $HELM_PLUGIN_DIR; scripts/install_plugin.sh"
   update: "cd $HELM_PLUGIN_DIR; scripts/install_plugin.sh"
