--- a/charts/helm-dashboard/templates/serviceaccount.yaml
+++ b/charts/helm-dashboard/templates/serviceaccount.yaml
@@ -17,11 +17,11 @@ apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: {{ include "helm-dashboard.serviceAccountName" . }}
 rules:
-  - apiGroups: ["", "apps", "rbac.authorization.k8s.io", "rbac", "batch", "extensions", "networking.k8s.io", "storage.k8s.io"]
+  - apiGroups: ["*"]
     resources: ["*"]
     verbs: ["get", "list", "watch"]
   {{- if .Values.dashboard.allowWriteActions }}
-  - apiGroups: ["", "apps", "rbac.authorization.k8s.io", "rbac", "batch", "extensions", "networking.k8s.io", "storage.k8s.io"]
+  - apiGroups: ["*"]
     resources: ["*"]
     verbs: ["get", "list", "watch", "create", "delete", "patch", "update"]
   {{- end }}
