Added 'debug' flag in values (#143)
* Added 'debug' flag in values

- Helps to set environment on debug mode
- Can fix #142

* Addressed changes

--- a/charts/helm-dashboard/templates/deployment.yaml
+++ b/charts/helm-dashboard/templates/deployment.yaml
@@ -40,6 +40,8 @@ spec:
             value: /opt/dashboard/helm/config
           - name: HELM_DATA_HOME
             value: /opt/dashboard/helm/data
+          - name: DEBUG
+            value: {{- ternary " 1" "" .Values.debug }}
           ports:
             - name: http
               containerPort: 8080
