--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+*.cov
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
