Add github workflow for auto PR labeling (#179)
Co-authored-by: Harshit Mehta <harshitm@nvidia.com>

--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -48,6 +48,7 @@ github-actions:
   - .github/ISSUE_TEMPLATE/*
   - .github/labeler.yml
   - .github/pull_request_template
+  - .github/workflow/pull-request-labeler.yaml
 
 release:
   - .github/workflows/publish-chart.yaml
