Update Kommunity link (#184)

--- a/.github/ISSUE_TEMPLATE/bug.yaml
+++ b/.github/ISSUE_TEMPLATE/bug.yaml
@@ -54,6 +54,6 @@ body:
 
       value: |
 
-        You can also join our slack community [here](https://join.slack.com/t/komodorkommunity/shared_invite/zt-1dm3cnkue-ov1Yh~_95teA35QNx5yuMg)
+        You can also join our slack community [here](https://komodorkommunity.slack.com)
 
         Feel free to check out other cool repositories of the [komodorio](https://github.com/komodorio)
