Add namespace parameter to chart values
closes #189

--- a/charts/helm-dashboard/values.yaml
+++ b/charts/helm-dashboard/values.yaml
@@ -30,6 +30,10 @@ resources:
 
 dashboard:
   allowWriteActions: true
+
+  # default namespace for Helm operations
+  namespace: ""
+
   persistence:
     enabled: true
 
