--- a/charts/helm-dashboard/templates/deployment.yaml
+++ b/charts/helm-dashboard/templates/deployment.yaml
@@ -34,14 +34,18 @@ spec:
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           env:
-          - name: HELM_CACHE_HOME
-            value: /opt/dashboard/helm/cache
-          - name: HELM_CONFIG_HOME
-            value: /opt/dashboard/helm/config
-          - name: HELM_DATA_HOME
-            value: /opt/dashboard/helm/data
-          - name: DEBUG
-            value: {{- ternary " 1" "" .Values.debug }}
+            - name: HELM_CACHE_HOME
+              value: /opt/dashboard/helm/cache
+            - name: HELM_CONFIG_HOME
+              value: /opt/dashboard/helm/config
+            - name: HELM_DATA_HOME
+              value: /opt/dashboard/helm/data
+            - name: DEBUG
+              value: {{- ternary " 1" "" .Values.debug }}
+            {{- if .Values.dashboard.namespace }}
+            - name: HELM_NAMESPACE
+              value: {{ .Values.dashboard.namespace }}
+            {{end}}
           ports:
             - name: http
               containerPort: 8080
@@ -57,8 +61,8 @@ spec:
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
           volumeMounts:
-          - name: data
-            mountPath: /opt/dashboard/helm
+            - name: data
+              mountPath: /opt/dashboard/helm
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
@@ -77,5 +81,5 @@ spec:
           persistentVolumeClaim:
             claimName: {{ include "helm-dashboard.fullname" . }}
         {{- else }}
-          emptyDir: {}
+          emptyDir: { }
         {{- end }}
