--- a/charts/helm-dashboard/values.yaml
+++ b/charts/helm-dashboard/values.yaml
@@ -67,6 +67,20 @@ dashboard:
     ## Helm Dashboard data Persistent Volume size
     ##
     size: 100M
+  
+## @param.updateStrategy.type Set up update strategy for helm-dashboard installation.
+## Set to Recreate if you use persistent volume that cannot be mounted by more than one pods to make sure the pods is destroyed first.
+## ref: https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#strategy
+## Example:
+## updateStrategy:
+##  type: RollingUpdate
+##  rollingUpdate:
+##    maxSurge: 25%
+##    maxUnavailable: 25%
+##
+updateStrategy:
+  type: RollingUpdate
+
 
 podAnnotations: {}
 
@@ -100,3 +114,4 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
