Improve tests for repositories
Relates to #210

--- a/pkg/dashboard/objects/testdata/repositories.yaml
+++ b/pkg/dashboard/objects/testdata/repositories.yaml
@@ -28,3 +28,6 @@ repositories:
   password: ""
   url: http://secondexample.com
   username: ""
+- cache: testing-index.yaml
+  name: testing
+  url: http://example.com/charts
