New CLI Flag `--devel` To Include Development/Prerelease Versions of Charts (#139)
* Include devel Flag for Toggling Dev Chart Versions

The flag `--devel` for enabling/disabling dev versions
of charts in following endpoints:
1. /api/helm/repositories/kafka-operator
2. /api/helm/repositories/versions
3. /api/helm/repositories/latestver

Signed-off-by: Bhargav Ravuri <bhargav.ravuri@infracloud.io>

* Run Tests on Devel Flag Related Changes

Signed-off-by: Bhargav Ravuri <bhargav.ravuri@infracloud.io>

---------

Signed-off-by: Bhargav Ravuri <bhargav.ravuri@infracloud.io>

--- a/pkg/dashboard/objects/testdata/testing-index.yaml
+++ b/pkg/dashboard/objects/testdata/testing-index.yaml
@@ -64,3 +64,37 @@ entries:
           email: containers@bitnami.com
       icon: ""
       apiVersion: v2
+  traefik:
+    - apiVersion: v1
+      appVersion: 1.7.26
+      deprecated: true
+      description: A Traefik based Kubernetes ingress controller with Let's
+        Encrypt support
+      home: https://traefik.io/
+      icon: https://docs.traefik.io/assets/img/traefik.logo.png
+      keywords:
+      - traefik
+      - ingress
+      - acme
+      - letsencrypt
+      name: traefik
+      sources:
+      - https://github.com/containous/traefik
+      - https://github.com/helm/charts/tree/master/stable/traefik
+      version: 1.87.7-rc1
+  rabbitmq:
+    - apiVersion: v1
+      appVersion: 3.8.2
+      deprecated: true
+      description: DEPRECATED Open source message broker software that implements the Advanced
+        Message Queuing Protocol (AMQP)
+      home: https://www.rabbitmq.com
+      icon: https://bitnami.com/assets/stacks/rabbitmq/img/rabbitmq-stack-220x234.png
+      keywords:
+      - rabbitmq
+      - message queue
+      - AMQP
+      name: rabbitmq
+      sources:
+      - https://github.com/bitnami/bitnami-docker-rabbitmq
+      version: invalid-version
